fix: Add collapsed border to table
Firefox doesn't have this by default and it's causing layout issues

--- a/src/style.css
+++ b/src/style.css
@@ -20,6 +20,7 @@ header {
 
 table {
     margin: auto;
+    border-collapse: collapse;
     -webkit-border-horizontal-spacing: 0;
     -webkit-border-vertical-spacing: 0;
 }
